<resources>
    <string name="app_name">AbankUser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Change Picture -->
    <string name="title_change_picture">Choose action</string>
    <string-array name="profile_picture">
        <item>Take a photo</item>
        <item>Choose from gallery</item>
        <item>Delete profile picture</item>
    </string-array>
    <!--Text Message String-->
    <string name="text_empty_field">This field is empty</string>
    <string name="text_invalid_email">Invalid Email Address</string>
    <string name="text_pass_below">Password too short, must above 8 characters</string>
    <string name="text_pass_not_match">Password not same</string>
    <string name="text_failed_login">Failed log in your account</string>
    <string name="text_failed_reset">Failed reset your password</string>
    <string name="text_failed_register">Failed to register your account</string>
    <string name="text_success_register">Please Login First To Access Abank!</string>
    <string name="text_success_send_verification">Please check your email to verify your account</string>
    <string name="text_failed_send_verification">Failed to send verification email</string>
    <string name="text_logout_verify">Are you sure to logout your account?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_permission_not_granted">Permissions not granted by the user</string>
    <!--Text Success String-->
    <string name="text_welcome">Welcome To Abank!</string>
    <string name="text_success_reset">Please check your email inbox</string>
    <!--Auth String-->
    <string name="til_email_Address">Email Address</string>
    <string name="til_pass">Password</string>
    <string name="btn_forgot">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="til_id">NIK Number</string>
    <string name="til_name">Full Name (Same as KTP)</string>
    <string name="til_confirm_pass">Confirm Password</string>
    <string name="tv_forgot_info">Please write your email address to reset your assword</string>
    <string name="btn_reset">Reset Password</string>
    <string name="til_phone">Phone Number</string>
    <string name="img_email_verification">Email Verification</string>
    <string name="tv_info_verification">Please check your email address to verify your account</string>
    <!--Main Fragment String-->
    <string name="tv_welcome">Welcome</string>
    <!--Icon String-->
    <string name="ic_notification">Notifications</string>
    <string name="ic_forum">Chatting</string>
    <string name="ic_logout">Log Out</string>
    <string name="ic_data_iot">IoT Data</string>
    <string name="ic_maps">IoT Maps</string>
    <string name="ic_settings">Settings</string>
    <string name="ic_account">My Account</string>
    <string name="ic_help">Help</string>
    <string name="ic_call_center">Call Center</string>
    <string name="ic_profile_picture">Profile Picture</string>
    <string name="ic_change_email">Change Email</string>
    <string name="ic_change_pass">Change Password</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="title_activity_maps">Map</string>
</resources>